--- a/templates/ajax/game/town/routes.html.twig
+++ b/templates/ajax/game/town/routes.html.twig
@@ -45,8 +45,8 @@
 {% block js %}
     {{ parent() }}
     <script>
-        if ($.client.get('current', 'routes') !== null) {
-            let route = document.querySelector('div.routes-list [x-route-id="' + $.client.get('current', 'routes') +'"]');
+        if ($.client.get('current', 'routes', null, Client.DomainDaily) !== null) {
+            let route = document.querySelector('div.routes-list [x-route-id="' + $.client.get('current', 'routes', null, Client.DomainDaily) +'"]');
             if(route) route.classList.add("me");
         }
 
