--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -256,7 +256,7 @@
     &>*+* { margin-left: 10px; }
   }
   font-size: 1.1rem;
-  background: #3c2018; box-shadow: 0 0 5px rgba(0,0,0,0.2);  padding: 0 0 5px;
+  background: #3c2018; box-shadow: 0 0 5px rgba(0,0,0,0.2);
 
   &>.quote {
     padding: 15px; font-style: italic;
