Transform text in small caps for time separator in Forums

--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -528,7 +528,7 @@ ul.subscriptions {
 }
 
 .forum-separator {
-  cursor: default; font-size: 0.9em; font-weight: bold; padding-left: 10px;
+  cursor: default; font-size: 0.9em; font-weight: bold; padding-left: 10px; font-variant: small-caps;
 }
 
 .forum-note {
