--- a/assets/less/modules/forum.less
+++ b/assets/less/modules/forum.less
@@ -272,6 +272,7 @@ ul.subscriptions {
     &.new { list-style: url("../../img/icons/anim_icon_mail.gif"); font-weight: bold }
     &:not(.new) { list-style: none }
     &+li { margin-top: 4px; }
+    &:hover { color: white; }
   }
 }
 
