--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -231,7 +231,9 @@
                 $.html.forEach('[x-thread-id]', element => element.classList.remove('selected'))
                 let viewer = document.getElementById('forum-content');
                 {let c; while ((c = viewer.firstChild)) viewer.removeChild(c);}
-                $.ajax.no_history().load( viewer, '{{ url('forum_id_search_controller', {fid: forum.id}) }}', false )
+                $.ajax.no_history().load( viewer, '{{ url('forum_id_search_controller', {fid: forum.id}) }}', false, null, () => {
+                    document.getElementById('search-query').focus();
+                } )
             });
         {% endif %}
 
