--- a/templates/ajax/forum/search_wrapper.html.twig
+++ b/templates/ajax/forum/search_wrapper.html.twig
@@ -14,6 +14,6 @@
             'user': {{ user ? user : 'null' }},
             'query': {{ query ? ("'" ~ query|e('js') ~ "'")|raw : 'null' }},
             'titles': {{ opt_title ? 'true' : 'false' }},
-        } ) })();
+        }, () => document.getElementById('search-query').focus() ) })();
     </script>
 {% endblock %}
