--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -200,11 +200,10 @@
                         {% embed "ajax/admin/towns/map.html.twig" with {'default_zoom': 0, 'default_show_zone': false, 'allow_zone_view': false, 'map': map_data} %}
                         {% endembed %}
                         {% if is_granted("ROLE_ADMIN") %}
+                            <div id="zone_floor"></div>
                             <div id="dash_zone_generator" x-target="zone" x-id="">
-                                {{ 'Zone'|trans({}, 'admin') }} <span id="zone_coords"></span>
                                 {{ item_creator(itemPrototypes, 'zone') }}
                             </div>
-                            <div id="zone_floor"></div>
                             <div class="lightbox">
                                 <div class="row">
                                     <div class="cell rw-12 padded">
@@ -251,6 +250,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <div id="dash_zone_log"></div>
                         {% endif %}
                     </div>
                 </div>
@@ -865,7 +865,6 @@
         {% embed "scripts/log.js.twig" %}{% endembed %}
 
         (function() {
-
             $.html.addEventListenerAll('input[x-all][x-target]', 'click', (e,elem) => {
                 $.html.forEach( 'input[x-id][x-target="' + elem.getAttribute('x-target') + '"]', c => c.checked = elem.checked );
             });
@@ -1001,11 +1000,11 @@
                     ev.preventDefault();ev.stopPropagation();
                     let target = ev.target.parentElement;
                     document.getElementById("dash_zone_generator").setAttribute('x-id', target.getAttribute("x-id"));
-                    document.getElementById("zone_coords").innerText = "[" + target.getAttribute("x-zone-x") + ", " + target.getAttribute("x-zone-y") + "]";
+                    // document.getElementById("zone_coords").innerText = "[" + target.getAttribute("x-zone-x") + ", " + target.getAttribute("x-zone-y") + "]";
                     $.ajax.easySend('{{ url('get_zone_infos', {id: town.id}) }}', {'zone_id': target.getAttribute("x-id")}, function(data){
                         document.querySelector("#zone_floor").innerHTML = data.view;
                         document.querySelector("#zone_floor .inventory").classList.add('desert');
-                        document.querySelector("#zone_floor .inventory .title").innerText = "[" + target.getAttribute("x-zone-x") + ", " + target.getAttribute("x-zone-y") + "]";
+                        document.querySelector("#zone_floor .inventory .title").innerText = "{{ 'Zone'|trans({}, 'admin') }} [" + target.getAttribute("x-zone-x") + ", " + target.getAttribute("x-zone-y") + "]";
                         let items = document.querySelectorAll('#zone_floor .inventory .item:not(.locked)[x-item-id]');
                         for (let i = 0; i < items.length; i++)
                             items[i].addEventListener('click', function(ev) {
@@ -1027,6 +1026,8 @@
                         document.getElementById("ruin_camp_level").value = data.camp_levl;
                         document.querySelector("#ruin_camp_base>span").innerText = data.ruin_camp;
                         document.getElementById("ruin_camp_base").classList.toggle('hidden', data.ruin_camp === null);
+                        document.getElementById("dash_zone_log").innerHTML = data.zone_log;
+                        {% embed "scripts/log.js.twig" with {'base_element': "document.getElementById('dash_zone_log')"} %}{% endembed %}
                     });
                 });
             }
