--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -158,7 +158,7 @@
                     {% if permission.only_mod_access %}
                         <div class="forum-control">
                             <b><i class="fa fa-exclamation"></i> {{ 'Moderation'|trans({},'global') }}</b>
-                            <div class="pad">{{ 'Du moderierst dieses Forum, verfügst aber nicht über Leserechte. Es werden dir nur Threads angezeigt, in denen mindestens ein Post gemeldet wurde.' }}</div>
+                            <div class="pad">{{ 'Du moderierst dieses Forum, verfügst aber nicht über Leserechte. Es werden dir nur Threads angezeigt, in denen mindestens ein Post gemeldet wurde.'|trans({}, 'global') }}</div>
                         </div>
                         <br />
                     {% endif %}
