--- a/templates/ajax/admin/towns/log.html.twig
+++ b/templates/ajax/admin/towns/log.html.twig
@@ -1,5 +1,5 @@
 <div class="log-container">
-    <div class="log" x-log-default-provided="{% if log_content is defined %}1{% else %}0{% endif %}" x-log-source="{{ log_source }}">
+    <div class="log" x-log-default-provided="{% if log_content is defined %}1{% else %}0{% endif %}" x-log-source="{{ log_source }}" {% if additional_log_params is defined and additional_log_params is not empty %}x-log-params="{{ additional_log_params|json_encode }}"{% endif %}>
         <div class="log-content">
             {% if log_content is defined %}
                 {{ log_content|raw }}
