--- a/templates/scripts/log.js.twig
+++ b/templates/scripts/log.js.twig
@@ -8,6 +8,7 @@
 
         const has_preloaded_content = log.getAttribute('x-log-default-provided') == '1';
         const url = log.getAttribute('x-log-source');
+        const params = log.getAttribute('x-log-params') ? JSON.parse( log.getAttribute('x-log-params') ) : {};
         let content_box = log.querySelectorAll('.log-content');
 
         const fun_refresh = function(d,bg) {
@@ -23,6 +24,8 @@
             for(let j = 0 ; j < filters.length ; j++) {
                 payload[filters[j].getAttribute('x-filter-name')] = filters[j].value;
             }
+
+            Object.getOwnPropertyNames(params).forEach( o => payload[o] = params[o] );
 
             if (bg) $.ajax.background().no_history().load( content_box[0], url, false, payload );
             else $.ajax.no_history().load( content_box[0], url, false, payload )
