--- a/templates/scripts/errors/generic.txt.twig
+++ b/templates/scripts/errors/generic.txt.twig
@@ -16,5 +16,6 @@
 {{ constant('App\\Service\\ErrorHelper::ErrorActionNotAvailableSP') }}: '{{'Du musst noch mehr Erfahrung sammeln, um das tun zu können...'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorActionNotAvailableTerror') }}: '{{'Du bist vor Angst erstarrt...'|trans({},'global')|e('js')}}',
 {{ constant('App\\Service\\ErrorHelper::ErrorRateLimited') }}: '{{'Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.'|trans({},'global')|e('js')}}',
+{{ constant('App\\Service\\ErrorHelper::ErrorNoMP') }}                     : '{{'Für diese Aktion hast du nicht genug MP.'|trans({},'global')|e('js')}}',
 
 {{ constant('App\\Service\\ErrorHelper::ErrorBlockedByUser') }}: '{{'Dieser Spieler hat dich geblockt. Du kannst ihm keine Nachricht mehr schicken.'|trans({},'global')|e('js')}}',
