--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1714,6 +1714,11 @@ div.item-tag {
   &.item-tag-essential:after { background: url("../img/item/cat_job.gif") center/contain no-repeat }
   &.item-tag-weapon:after { background: url("../img/item/cat_weapon.gif") center/contain no-repeat }
   &.item-tag-heavy:after { background: url("../img/item/cat_heavy.gif") center/contain no-repeat }
+
+  &.item-tag-item-id:after { background: url("../img/icons/small_dev.png") center/contain no-repeat }
+  &.item-tag-poison-deadly:after { background: url("../img/icons/death.gif") center/contain no-repeat }
+  &.item-tag-poison-infect:after { background: url("../img/status/status_infection.gif") center/contain no-repeat }
+  &.item-tag-first-pick:after { background: url("../img/item/item_bagxl.gif") center/contain no-repeat }
   em {
     color: white;
   }
