--- a/templates/ajax/game/item.html.twig
+++ b/templates/ajax/game/item.html.twig
@@ -11,6 +11,6 @@
     <span class="item-icon"><img src="{{ asset('build/images/item/item_' ~ item.prototype.icon ~ '.gif') }}" alt="{{ item.prototype.label|trans({},'items') }}"></span>
     {% if count is defined and count > 1 %}<span>{{ count }}</span>{% endif %}
     {% if no_tooltip is not defined or not no_tooltip %}
-        {% embed "ajax/game/item_tooltip.html.twig" with {"item": item} %}{% endembed %}
+        {% embed "ajax/game/item_tooltip.html.twig" with {"item": item, 'debug': debug is defined and debug} %}{% endembed %}
     {% endif %}
 </li>
