--- a/templates/ajax/admin/users/account.html.twig
+++ b/templates/ajax/admin/users/account.html.twig
@@ -53,6 +53,12 @@
                                     <optgroup label="{{ 'Profil'|trans({},'admin') }}">
                                         {% if is_granted("ROLE_ADMIN") %}
                                             <option value="{{ url('admin_users_account_manage', {action: 'rename', id: user.id}) }}" x-confirm="RENAME" x-query="{{ 'Neuen Namen eingeben.'|trans({},'admin') }}">{{ 'Umbenennen'|trans({},'admin') }}</option>
+                                            {% if user.eternalID is not null and not user.noAutomaticNameManagement %}
+                                                <option value="{{ url('admin_users_account_manage', {action: 'name_manual', id: user.id}) }}" x-confirm="MANUAL_NAME">{{ 'Spielernamen nicht von EternalTwin übernehmen'|trans({},'admin') }}</option>
+                                            {% endif %}
+                                            {% if user.noAutomaticNameManagement %}
+                                                <option value="{{ url('admin_users_account_manage', {action: 'name_auto', id: user.id}) }}" x-confirm="AUTO_NAME">{{ 'Automatische Verwaltung des Spielernamens wiederherstellen'|trans({},'admin') }}</option>
+                                            {% endif %}
                                         {% endif %}
                                         <option value="{{ url('admin_users_account_manage', {action: 'rename_pseudo', id: user.id}) }}" x-confirm="RENAME PSEUDO" x-query="{{ 'Neuen Namen eingeben.'|trans({},'admin') }}">{{ 'Anzeigenamen ändern'|trans({},'admin') }}</option>
                                         {% if user.displayName %}
@@ -199,6 +205,9 @@
                         </div>
                         <div class="cell padded rw-3 rw-sm-12">
                             {{ user.displayName ?? '-' }}
+                            {% if user.eternalID and user.noAutomaticNameManagement %}
+                                <br/><i>{{ 'Nicht von ET verwaltet.'|trans({},'admin') }}</i>
+                            {% endif %}
                         </div>
                         <div class="cell padded rw-3 rw-sm-12 note note-lightest">
                             {{ 'E-Mail'|trans({}, 'admin') }}
