--- a/templates/ajax/game/town/posts.html.twig
+++ b/templates/ajax/game/town/posts.html.twig
@@ -28,7 +28,6 @@
                     {% endif %}
                 </i>
                 {% if post.owner and post.owner.user.name != 'Der Rabe' %}
-
                     {% if (post.owner.user.avatar) %}
                         {% if app.user.preferSmallAvatars %}
                             <div class="avatar small ua-{{ post.owner.user.id % 10 }}"><img alt="" src="{{ path('app_web_avatar', {'uid': post.owner.user.id, 'name': post.owner.user.avatar.smallName, 'ext': post.owner.user.avatar.format}) }}"></div>
@@ -45,12 +44,11 @@
                         <div class="avatarcrow"><img alt="" src="{{ asset('build/images/forum/crow/crow.' ~ (app.request.locale|e('html_attr')|split('_', 2))[0] ~ '.png') }}"></div>
                     {% endif %}
                 {% endif %}
-
                 <b>
                     {% if not post.owner or post.owner.user.name == 'Der Rabe' %}
                         {{ 'Der Rabe'|trans({},'global') }}
                     {% else %}
-                        {{ post.owner.name }}
+                        {% include 'ajax/soul/playername.html.twig' with {user: post.owner.user, globalSpace: false} only %}
                     {% endif %}
                 </b>
             </div>
