--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -179,7 +179,12 @@
                                 <div class="forum-button-disabled"><img alt="" src="{{ asset('build/images/icons/small_prev.gif') }}" /></div>
                                 <div class="forum-button-disabled"><img alt="" src="{{ asset('build/images/icons/small_moveleft.gif') }}" /></div>
                                 {% endif %}
-                                <div class="forum-button">{{ 'Seite {page}/{pages}'|trans({'{page}': current_page, '{pages}': pages},'global') }}</div>
+                                <div class="forum-button" x-forum-action="thread-select-page">
+                                    {{ 'Seite {page}/{pages}'|trans({'{page}': '<span class="current_page_marker">&nbsp;' ~ current_page ~ '</span>', '{pages}': pages},'global')|raw }}
+                                    <div class="tooltip">
+                                        {{ 'Zum Wechsein der Seite hier klicken'|trans({}, 'global') }}
+                                    </div>
+                                </div>
                                 {% if current_page < pages %}
                                 <div class="forum-button" x-forum-action="thread-pager" x-to-page="{{ current_page + 1 }}"><img alt="" src="{{ asset('build/images/icons/small_move.gif') }}" /></div>
                                 <div class="forum-button" x-forum-action="thread-pager" x-to-page="{{ pages }}"><img alt="" src="{{ asset('build/images/icons/small_next.gif') }}" /></div>
@@ -289,5 +294,31 @@
 
         $.html.addEventListenerAll( '[x-forum-action="thread-pager"][x-to-page]', 'click',
             (e,elem) => $.ajax.no_history().load( null, '{{ path('forum_view', {id: forum.id}) }}', false, {page: parseInt( elem.getAttribute('x-to-page') )} ) );
+
+        $.html.addEventListenerAll( '[x-forum-action="thread-select-page"]', 'click', function(e,elem) {
+            e.preventDefault();
+            e.stopPropagation();
+            let pagMarker = elem.querySelector(".current_page_marker");
+            pagMarker.innerHTML = '<input type="text" name="page_to_go" class="page_to_go inline" style="width: 24px;margin: 0 5px" />';
+            elem.querySelector("input.page_to_go").focus();
+            $.html.addEventListenerAll('[x-forum-action="thread-select-page"] input.page_to_go', 'click', function(e, elem){
+                e.preventDefault();
+                e.stopPropagation();
+            });
+            $.html.addEventListenerAll('[x-forum-action="thread-select-page"] input.page_to_go', 'change', function(e, elem){
+                let editor = get_forum_editor();
+                {% if editor is defined %}
+                {let c; while ((c = editor.firstChild)) editor.removeChild(c);}
+                {% endif %}
+                let to_page = parseInt( elem.value );
+                if (isNaN(to_page))
+                    return;
+                if (to_page > {{ pages }})
+                    to_page = {{ pages }};
+                if (to_page < 1) to_page = 1;
+                $.ajax.push_history('{{ path('forum_view', {id: forum.id}) }}/' + to_page);
+                $.ajax.no_history().load( null, '{{ path('forum_view', {id: forum.id}) }}', false, {page: to_page});
+            });
+        } );
     </script>
 {% endblock %}
