--- a/templates/ajax/forum/view.html.twig
+++ b/templates/ajax/forum/view.html.twig
@@ -1,5 +1,5 @@
 {% extends "ajax/game/game.html.twig" %}
-{% block title %}{{ forum.title|raw }}{% endblock %}
+{% block title %}{{ forum.title|raw }} - {{ 'Seite {page}'|trans({'{page}': current_page}, 'global')|raw }}{% endblock %}
 {% block menu_text %}
     {{parent()}}
     <li class="back-dash" x-ajax-href="{{ url('game_landing') }}">{{ 'Zum Spiel'|trans({},'global') }}</li>
