--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -145,13 +145,33 @@
                         <div class="row-flex toggle-target">
                             <div class="cell"><div x-forum-action="toggle" x-text-modal-node="@" class="forum-button"><i class="fas fa-user"></i><span class="forum-button-tooltip">{{ 'Spielernamen einfügen'|trans({},'global') }}</span></div></div>
                             <div class="cell hidden">
+                                <div id="{{ type }}-editor-add-friend-list-container" class="add-users-list-container">
+                                    <div style="margin-right: 5px;" x-forum-action="friendlist" x-text-modal-node="@" class="forum-button" id="{{ type }}-editor-open-friendlist">
+                                        <i class="fas fa-address-book"></i><span class="forum-button-tooltip">{{ 'Kontaktliste'|trans({},'global') }}</span>
+                                    </div>
+                                    <div id="{{ type }}-editor-add-friend-list" class="add-users-list" style="display: none;">
+                                        {% embed "ajax/soul/users_list.html.twig" with {
+                                            'var': '',
+                                            'single_entry': false,
+                                            'users': app.user.friends,
+                                            'route': ''
+                                        } %}{% endembed %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cell hidden">
                                 <div id="{{ type }}-editor-add-users-list-container" class="add-users-list-container">
-                                    <div><label><input type="text" id="{{ type }}-editor-add-users-search" class="add-users-search" /></label><div class="tooltip help">{{ 'Gib den Pseudo des Bürgers ein.'|trans({},'soul') }}</div></div>
+                                    <div>
+                                        <label><input type="text" id="{{ type }}-editor-add-users-search" class="add-users-search" /></label>
+                                        <div class="tooltip help">{{ 'Gib den Pseudo des Bürgers ein.'|trans({},'soul') }}</div>
+                                    </div>
                                     <div id="{{ type }}-editor-add-users-list" class="add-users-list"></div>
                                 </div>
                             </div>
                             <div class="cell hidden">
-                                <div style="margin-left: 5px;" x-forum-action="toggle" x-text-modal-node="@" class="forum-button" id="{{ type }}-editor-add-users-close"><i class="fas fa-times"></i><span class="forum-button-tooltip">{{ 'Abbrechen'|trans({},'global') }}</span></div>
+                                <div style="margin-left: 5px;" x-forum-action="toggle" x-text-modal-node="@" class="forum-button" id="{{ type }}-editor-add-users-close">
+                                    <i class="fas fa-times"></i><span class="forum-button-tooltip">{{ 'Abbrechen'|trans({},'global') }}</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -842,7 +862,7 @@
                                 const node = '@' + elem.getAttribute('x-soul-name').replace(/\W+/,'') + ':' + elem.getAttribute('x-soul-id');
 
                                 node_transfer_source.value = before + node + after;
-                                node_transfer_source.setSelectionRange( before.length, before.length + node.length );
+                                node_transfer_source.setSelectionRange( node_transfer_source.value.length, node_transfer_source.value.length );
                                 node_transfer_source.focus();
                                 transfer_to_preview();
 
@@ -870,6 +890,34 @@
                 searchBox.addEventListener('focus', () => userSearchHandler());
                 searchBox.addEventListener('blur', () => setTimeout( () => document.getElementById('{{ type }}-editor-add-users-list').innerHTML = '', 500));
             }
+
+            let friendlistBtn = document.getElementById("{{ type }}-editor-open-friendlist");
+            let friendlist = document.getElementById("{{ type }}-editor-add-friend-list");
+            if (friendlistBtn) friendlistBtn.addEventListener('click', function(e){
+                e.preventDefault();
+                e.stopPropagation();
+                if(friendlist.style.display === "none") {
+                    friendlist.style.display = "";
+                } else {
+                    friendlist.style.display = "none";
+                }
+            })
+            $.html.addEventListenerAll('#{{ type }}-editor-add-friend-list>.users-list-entry>div', 'click', function (e, elem) {
+
+                const before = node_transfer_source.value.substr( 0, node_transfer_source.selectionStart );
+                const selected = node_transfer_source.value.substr( node_transfer_source.selectionStart,  node_transfer_source.selectionEnd - node_transfer_source.selectionStart );
+                const after = node_transfer_source.value.substr( node_transfer_source.selectionEnd );
+
+                const node = '@' + elem.getAttribute('x-soul-name').replace(/\W+/,'') + ':' + elem.getAttribute('x-soul-id') + " ";
+
+                node_transfer_source.value = before + node + after;
+                node_transfer_source.setSelectionRange( node_transfer_source.value.length, node_transfer_source.value.length );
+                node_transfer_source.focus();
+                transfer_to_preview();
+
+                document.getElementById('{{ type }}-editor-add-users-close').click();
+                friendlist.style.display = "none";
+            })
         })();
     </script>
 {% endblock %}
