Fixed eat the liver action/translation

--- a/templates/ajax/admin/users/citizen.html.twig
+++ b/templates/ajax/admin/users/citizen.html.twig
@@ -59,7 +59,7 @@
                                 {% if is_granted("ROLE_ADMIN") %}
                                     <button id="x-headshot"><img src="{{ asset('build/images/actions/bullets.gif') }}" alt="" /><span class="hide-md hide-sm">{{ 'Kopfschuss'|trans({}, 'admin') }}</span></button>
                                 {% endif %}
-                                    <button id="x-liver-eat"><img src="{{ asset('build/images/actions/canteen.gif') }}" alt="" /><span class="hide-md hide-sm">{{ 'Leber zu essen'|trans({}, 'admin') }}</span></button>
+                                    <button id="x-liver-eat"><img src="{{ asset('build/images/actions/canteen.gif') }}" alt="" /><span class="hide-md hide-sm">{{ 'Leber fressen'|trans({}, 'admin') }}</span></button>
                                 </div>
                                 {% endif %}
 
