--- a/templates/ajax/soul/visit.html.twig
+++ b/templates/ajax/soul/visit.html.twig
@@ -119,7 +119,7 @@
             {% if user.activeCitizen.alive %}
             <div class="row">
                 <div class="padded cell rw-5 rw-md-6 rw-sm-12">
-                    <button id="x-liver-eat"><img alt="" src="{{ asset('build/images/actions/canteen.gif') }}">{{ 'Leber zu essen'|trans({},'admin') }}</button>
+                    <button id="x-liver-eat"><img alt="" src="{{ asset('build/images/actions/canteen.gif') }}">{{ 'Leber fressen'|trans({},'admin') }}</button>
                 </div>
             </div>
             {% endif %}
